# LoreHub

./: .env.example  .gitignore  Cargo.toml  PLAN.md  README.md  package-lock.json  package.json
apps/api/: Cargo.toml
apps/api/src/: auth.rs  config.rs  error.rs  main.rs
apps/api/src/routes/: auth.rs  collaboration.rs  health.rs  mod.rs  organizations.rs  pipelines.rs  repositories.rs
apps/web/: package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(auth)/register/: page.tsx
apps/web/app/(auth)/sso/: page.tsx
apps/web/app/[org]/[repo]/: page.tsx
apps/web/app/[org]/[repo]/analytics/: page.tsx
apps/web/app/[org]/[repo]/assets/: page.tsx
apps/web/app/[org]/[repo]/assets/[assetId]/: page.tsx
apps/web/app/[org]/[repo]/binary-diff/[assetId]/: page.tsx
apps/web/app/[org]/[repo]/branches/: page.tsx
apps/web/app/[org]/[repo]/cr/: actions.ts  page.tsx
apps/web/app/[org]/[repo]/cr/[number]/: actions.ts  page.tsx
apps/web/app/[org]/[repo]/diff/[base]/[head]/: page.tsx
apps/web/app/[org]/[repo]/issues/: actions.ts  page.tsx
apps/web/app/[org]/[repo]/issues/[number]/: actions.ts  page.tsx
apps/web/app/[org]/[repo]/locks/: page.tsx
apps/web/app/[org]/[repo]/obliterate/: page.tsx
apps/web/app/[org]/[repo]/pipelines/: page.tsx
apps/web/app/[org]/[repo]/pipelines/[runId]/: page.tsx
apps/web/app/[org]/[repo]/push/: page.tsx
apps/web/app/[org]/[repo]/revisions/: page.tsx
apps/web/app/[org]/[repo]/revisions/[revision]/: page.tsx
apps/web/app/[org]/[repo]/settings/: actions.ts  page.tsx
apps/web/app/[org]/[repo]/tree/[revision]/[[...path]]/: page.tsx
apps/web/app/[org]/notifications/: page.tsx
apps/web/app/[org]/settings/: page.tsx
apps/web/app/[org]/teams/: actions.ts  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/admin/cloud/billing/: page.tsx
apps/web/app/admin/enterprise/audit/: page.tsx
apps/web/app/admin/enterprise/auth/: page.tsx
apps/web/app/admin/enterprise/directory/: page.tsx
apps/web/app/admin/enterprise/sla/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/explore/: page.tsx
apps/web/components/: admin-tabs.tsx  command-palette.tsx  pipeline-log-stream.tsx  repo-tabs.tsx  site-header.tsx
apps/web/lib/: api.ts  dag.ts  demo-assets.ts  demo-collaboration.ts  demo-enterprise.ts  demo-pipelines.ts  demo-repository.ts  format.ts  highlight.ts  org-data.ts  render-rich-text.tsx  repo-data.ts  repo-settings-data.ts  search-params.ts
apps/web/scripts/: shoot.mjs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs  runner.rs
docs/: getting-started.md  user-guide.md
docs/deployment/: enterprise-operations.md  fly.md  hetzner.md  quick-start.md
docs/development/: local-dev.md
docs/reference/: api.md
infra/compose/: docker-compose.yml
infra/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker
infra/helm/lorehub/: Chart.yaml  values.yaml
infra/helm/lorehub/templates/: _helpers.tpl  api-deployment.yaml  configmap.yaml  ingress.yaml  services.yaml  web-deployment.yaml  worker-deployment.yaml
infra/terraform/envs/fly/: main.tf  variables.tf
infra/terraform/envs/hetzner/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/lorehub-cloud/: main.tf  outputs.tf  variables.tf
migrations/: 0001_initial.sql  0001_schema.sql  0002_collaboration.sql  0003_seed.sql
scripts/: install.sh  seed.sql
