[workspace]
members = ["apps/api", "apps/worker", "packages/db-types", "packages/lore-client"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["json", "macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.8.5"
sha2 = "0.10.9"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "derive", "migrate"] }
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tonic = { version = "0.14.2", features = ["transport", "codegen", "server", "router"] }
tonic-prost = "0.14.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
