[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
db-types = { path = "../../packages/db-types" }
hex.workspace = true
rand.workspace = true
sha2.workspace = true
jsonwebtoken.workspace = true
lore-client = { path = "../../packages/lore-client" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
